Fix layout issues when creating and editing jobs

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -33,6 +33,6 @@
   margin-right: 5px;
 }
 #job-navbar .navbar-btn {
- margin-top:0px;
+ margin-top:4px;
  margin-bottom:0px;
 }
